Report: Fix permanent URL popover covered by container
Fixes #631. This is a quickfix using fixed positioning to place it in
roughly the right place. A better future solution for this would be a
smarter popover component.

--- a/less/components/report.less
+++ b/less/components/report.less
@@ -287,6 +287,14 @@
 
                     p { padding: 0; }
                 }
+
+                .dropdown-menu-sidebar {
+                    position: fixed;
+                    left: auto;
+                    right: 18%;
+                    top: 6*@spacer;
+                    max-width: 28*@spacer;
+                }
             }
         }
 
